java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateParam4-hints.pass
Create Field foo in org.netbeans.test.java.hints.CreateParam4
Create Parameter foo
Create Local Variable foo
